--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /*min-height: 100vh;*/ /*From https://stackoverflow.com/questions/4575826/how-to-push-a-footer-to-the-bottom-of-page-when-content-is-short-or-missing */
+    /*min-height: 100vh;*/ 
     height: 100%;
 }
 
@@ -40,19 +40,71 @@ body {
 }
 
 .maincontainer {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.welcomeContainer {
+    text-align: center;
+    font-size: 40px;
     color: rgb(0, 153, 255);
 }
 
-
-.welcome {
+.aboutContainer {
     text-align: center;
-    font-size: 40px;
+    border-radius: 5px;
+    border: solid white;
+    width: 1000px;
+    align-self: center;
+}
+
+.educationContainer {
+    text-align: center;
+    border-radius: 5px;
+    border: solid white;
+    width: 1000px;
+    align-self: center;
+}
+
+.projectsContainer {
+    text-align: center;
+    border-radius: 5px;
+    border: solid white;
+    width: 1000px;
+    align-self: center;
+}
+
+.programmingContainer {
+    text-align: center;
+    border-radius: 5px;
+    border: solid white;
+    width: 1000px;
+    align-self: center;
+}
+
+.goalsContainer {
+    text-align: center;
+    border-radius: 5px;
+    border: solid white;
+    width: 1000px;
+    align-self: center;
+}
+
+
+.contactContainer {
+    text-align: center;
+    border-radius: 5px;
+    border: solid white;
+    width: 1000px;
+    align-self: center;
 }
 
 .footer {
     background-color: black;
     padding-top: 40px;
-    margin-top: auto; /*From https://stackoverflow.com/questions/72340370/how-to-make-footer-stay-at-the-bottom-of-page-despite-theres-not-enough-of-cont */
+    margin-top: auto; 
 }
 
 .welcomeText {
