--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,16 @@ body {
     gap: 10px;
 }
 
+a:link {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover, a:visited {
+    color: rgb(0, 153, 255);
+    text-decoration: none;
+}
+
 .maincontainer {
     color: white;
     display: flex;
