--- a/css/style.css
+++ b/css/style.css
@@ -126,10 +126,15 @@ body {
     transition: all 0.07s;
 }
 
-.projectsHover {
+.project1:hover, .project2:hover {
     transform: scale(1.1);
     border: solid rgb(0, 153, 255);
 }
+
+/*.projectsHover {
+    transform: scale(1.1);
+    border: solid rgb(0, 153, 255);
+}*/
 
 .innerProjectsContainer > * {
     width: 200px;
@@ -184,6 +189,10 @@ body {
     width: 125px;
     height: 125px;
     border: solid white;
+}
+
+.backToTopLink:hover {
+    border: solid rgb(0, 153, 255);
 }
 
 .footer {
