--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,12 @@ body {
     align-self: center;
 }
 
+.aboutContainer:hover {
+    border: solid black;
+    background-color: white;
+    color: black;
+}
+
 #about {
     text-align: center;
 }
@@ -92,6 +98,12 @@ body {
     border: solid white;
     width: 1000px;
     align-self: center;
+}
+
+.educationContainer:hover {
+    border: solid black;
+    background-color: white;
+    color: black;
 }
 
 #education {
@@ -155,6 +167,12 @@ body {
     align-self: center;
 }
 
+.programmingContainer:hover {
+    border: solid black;
+    background-color: white;
+    color: black;
+}
+
 #programming {
     text-align: center;
 }
@@ -164,6 +182,12 @@ body {
     border: solid white;
     width: 1000px;
     align-self: center;
+}
+
+.goalsContainer:hover {
+    border: solid black;
+    background-color: white;
+    color: black;
 }
 
 #goals {
@@ -176,6 +200,12 @@ body {
     border: solid white;
     width: 1000px;
     align-self: center;
+}
+
+.contactContainer:hover {
+    border: solid black;
+    background-color: white;
+    color: black;
 }
 
 #contact {
