--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,20 @@ body {
     align-self: center;
 }
 
+.projectsContainer:hover {
+    border: solid black;
+    background-color: white;
+    color: black;
+}
+
+.projectsContainer:hover .project1 {
+    border: solid black;
+}
+
+.projectsContainer:hover .project2 {
+    border: solid black;
+}
+
 #projects {
     text-align: center;
 }
