Change project 2 description

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ body {
 .aboutBody {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .educationContainer {
