--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,15 @@ body {
 
 .aboutBody {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.aboutTextContainer {
+    background-color: white;
+    border-radius: 10px;
+    border: solid black;
+    padding: 10px;
 }
 
 .educationContainer {
@@ -145,21 +152,35 @@ body {
     gap: 50px;
 }
 
+.innerProjectsContainer > * {
+    width: 206px;
+    text-align: center;
+    background-color: white;
+    border-radius: 10px;
+}
+
 .project1 {
-    background-image: url('../CalculatorProject.png');
+    background-image: url('../chessgameicon.png');
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: 100% 100%;
 }
 
 .project2 {
-    background-image: url('../BoardGameProject.png');
+    background-image: url('../weatherappicon.png');
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: 100% 100%;
 }
 
-.project1, .project2 {
+.project3 {
+    background-image: url('../3dgameicon.png');
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: 100% 100%;
+}
+
+.project1, .project2, .project3 {
     display: block;
     width: 200px;
     height: 200px;
@@ -169,7 +190,7 @@ body {
     transition: all 0.07s;
 }
 
-.project1:hover, .project2:hover {
+.project1:hover, .project2:hover, .project3:hover {
     transform: scale(1.1);
     border: solid rgb(0, 153, 255);
 }
@@ -179,9 +200,24 @@ body {
     border: solid rgb(0, 153, 255);
 }*/
 
-.innerProjectsContainer > * {
-    width: 200px;
-    text-align: center;
+.project1Subtext, .project2Subtext, .project3Subtext {
+    height: 40px;
+}
+
+.project1Desc, .project2Desc, .project3Desc {
+    font-size: 14px;
+    height: 70px;
+}
+
+.project1GitHubLinkContainer, .project2GitHubLinkContainer, .project3GitHubLinkContainer {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.project1GitHubLink, .project2GitHubLink, .project3GitHubLink {
+    width: 50px;
+    background-image: url('../github-original.svg');
 }
 
 .programmingContainer {
@@ -274,6 +310,6 @@ body {
     margin-top: auto; 
 }
 
-.mainContainer, .aboutContainer, .educationContainer, .projectsContainer, .project1, .project2, .programmingContainer, .otherSkillsContainer, .goalsContainer, .contactContainer, .backToTopLink {
+.mainContainer, .aboutContainer, .educationContainer, .projectsContainer, .project1, .project2, .project3, .programmingContainer, .otherSkillsContainer, .goalsContainer, .contactContainer, .backToTopLink {
     border: solid black;
 }
